完成metagpt的本地实践，适合开发脚手架